  * Add cmatrix and cheese to abe-fun.
  * Add carettah as alternative to mdpress and promote it to Recommends.
  * Promote Markdown implementations to Recommends.
  * Remove dependencies on auto6to4.
  * Bump Standards-Version to 3.9.4 (no changes)
  * Remove no more needed lintian overrides (empty-binary-package and
    extended-description-is-probably-too-short)

 -- Axel Beckert <abe@deuxchevaux.org>  Sat, 20 Apr 2013 16:32:33 +0200

abe-metapackages (11.1) unstable; urgency=low

  * Downgrade blhc and dh-exec to Recommends as they're not available on
    Squeeze.
  * Prefer mcabber over cabber as the latter is no more available in more
    recent distributions.
  * Downgrade sirc to Suggests as it's no more available in more recent
    distributions.
  * Prefer vim-nox and vim over vim-full which is solely available in
    Hardy.
  * Remove tla-tools, soon no more available at all.
  * kiva-base suggests kiva-users.
  * abe-commandline recommends apt-transport-https and suggests
    abe-packaging-dev.
  * Downgrade sl to Recommends.
  * abe-commandline and kiva-users: Add byobu, tmux and some TUI feed
    readers.
  * abe-commandline depends mr and recommends mr >= 1.06.
  * abe-office recommends retext, suggests python3-markdown as alternative
    to python-markdown, and suggests kiwix.
  * Make abe-packaging-dev and abe-fun conflict with the according kiva-*
    packages to enforce their removal and really replace them.
  * abe-office and abe-tablet recommend calibre.

 -- Axel Beckert <abe@deuxchevaux.org>  Fri, 08 Feb 2013 23:57:38 +0100

abe-metapackages (11) unstable; urgency=low

  * Add new metapackages abe-archive-tools, abe-fun, abe-games,
    abe-joystick, abe-packaging-dev, abe-tablet, and abe-tex.
  * Provides replacements for some of my previous kiva-* metapackages.
    + Merge kiva-fun into abe-fun and kiva-dev into abe-packaging-dev.
    + Merge most of kiva-base into abe-commandline.