@@ -3,16 +3,7 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-# This has to be exported to make some magic below work.
-export DH_OPTIONS
-
-configure:
-build: build-arch build-indep
-build-arch: build-stamp
-build-indep: build-stamp
-build-stamp: configure
-	touch $@
-
+build build-arch build-indep:
 clean:
 	dh_testdir
 	dh_testroot
@@ -23,7 +14,6 @@ binary-arch:
 binary-indep:
 	dh_testdir
 	dh_testroot
-	dh_installdirs
 	dh_install
 	dh_installchangelogs
 	dh_installdocs
